JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/a04.c
ALGORITHM(a04){
  int x;
  int y;
  x=y+1;
  if (x!=y){
    return x;
  } else { 
    y++;
  }
  return x;
}