JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test5.c
ALGORITHM(test5){
	if(a & b){
		a = 1;
	} else {
		a = 1;
	}
}
